Add method updateUrlPicture

--- a/client/index.html
+++ b/client/index.html
@@ -27,12 +27,17 @@
 	<form id="addTeamForm">
 		<p>
 			<label for="code">Fifa code:</label>
-			<input type="text" id="code" required value="RUS">
+			<input type="text" id="code" required value="PER">
 		</p>
 
 		<p>
 			<label for="name">Name:</label>
-			<input type="text" id="name" required value="RUSSIA">
+			<input type="text" id="name" required value="PERU">
+		</p>
+
+		<p>
+			<label for="group">Group:</label>
+			<input type="text" id="group" required value="H">
 		</p>
 
 		<p>
